crates/hid-asetek-protocol/tests/snapshots/snapshot_tests__snapshot_output_with_led.snap
---
source: crates/hid-asetek-protocol/tests/snapshot_tests.rs
expression: data
---
[
    1,
    0,
    244,
    1,
    1,
    128,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
