crates/hid-asetek-protocol/tests/snapshots/snapshot_tests__snapshot_output_zero_torque.snap
---
source: crates/hid-asetek-protocol/tests/snapshot_tests.rs
expression: data
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
