crates/hid-asetek-protocol/tests/snapshots/snapshot_tests__snapshot_protocol_constants.snap
---
source: crates/hid-asetek-protocol/tests/snapshot_tests.rs
assertion_line: 144
expression: "format!(\"VID={:#06X}, FORTE_PID={:#06X}, INVICTA_PID={:#06X}, LAPRIMA_PID={:#06X}, \\\n         TONY_KANNAN_PID={:#06X}, INPUT_SIZE={}, OUTPUT_SIZE={}, MAX_TORQUE={}\",\nasetek::ASETEK_VENDOR_ID, asetek::ASETEK_FORTE_PID,\nasetek::ASETEK_INVICTA_PID, asetek::ASETEK_LAPRIMA_PID,\nasetek::ASETEK_TONY_KANNAN_PID, asetek::REPORT_SIZE_INPUT,\nasetek::REPORT_SIZE_OUTPUT, asetek::MAX_TORQUE_NM,)"
---
"VID=0x2433, FORTE_PID=0xF301, INVICTA_PID=0xF300, LAPRIMA_PID=0xF303, TONY_KANNAN_PID=0xF306, INPUT_SIZE=32, OUTPUT_SIZE=32, MAX_TORQUE=20"
